vemo-app/main/default/objects/Config_Annual_Income_Level__c/Config_Annual_Income_Level__c.object-meta.xml
<CustomObject>
    <label>Program Config - Annual Income Level</label>
    <nameField>
        <displayFormat>INCOME{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Config - Annual Income Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>