vemo-app/main/default/objects/Config_Annual_Income_Level__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <label>Income</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>