vemo-app/main/default/objects/Config_Annual_Income_Level__c/fields/IsMinimumThreshold__c.field-meta.xml
<CustomField>
    <fullName>IsMinimumThreshold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Minimum Threshold</label>
    <type>Checkbox</type>
</CustomField>