vemo-app/main/default/objects/Config_Annual_Income_Level__c/fields/ProgramConfig__c.field-meta.xml
<CustomField>
    <fullName>ProgramConfig__c</fullName>
    <label>Program Config</label>
    <referenceTo>Program_Config__c</referenceTo>
    <relationshipLabel>Program Config - Annual Income Levels</relationshipLabel>
    <relationshipName>ConfigAnnualIncomeLevels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>